# makefile-mcp

./: .gitignore  Makefile  README.md  makefile_mcp.py  pyproject.toml
tests/: test_makefile_mcp.py
