[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "makefile-mcp"
version = "0.1.0"
description = "MCP server that exposes Makefile targets as executable tools for AI assistants."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
   { name="Will McGinnis", email="will@mcginniscommawill.com" },
]

dependencies = [
    "fastmcp>=2.14.0,<3.0.0"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pre-commit",
]

[project.scripts]
makefile-mcp = "makefile_mcp:main"

[project.urls]
"Homepage" = "https://github.com/wdm0006/makefile-mcp"
"Bug Tracker" = "https://github.com/wdm0006/makefile-mcp/issues"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B"]
ignore = ["E501", "C901"]

[tool.ruff.format]
quote-style = "double"
